calc the trade by day correctly

--- a/lib/simulator/test.yaml
+++ b/lib/simulator/test.yaml
@@ -1,5 +1,5 @@
 
-host: 192.168.2.171
+host: localhost
 port: 27017
 db_name: CBNB
 user: yuanjie
@@ -9,7 +9,7 @@ pwd: yuanjie
 start_date: '20130101'
 end_date: '20181231'
 capital: 5e6
-backtest_mode: CLOSE  # 回测方式，CLOSE为以当天收盘价交易
+backtest_mode: OPEN  # 回测方式，CLOSE为以当天收盘价交易
 
 
 data:
