--- a/strategy/basis_spread.yaml
+++ b/strategy/basis_spread.yaml
@@ -199,7 +199,22 @@ margin_ratio:
   BU.SHF: 0.07
   V.DCE: 0.07
 
-
+tcost:
+  TA.CZC:
+    mode: percentage
+    value: 0.06
+  PP.DCE:
+    mode:
+  L.DCE: 0.07
+  RB.SHF: 0.07
+  HC.SHF: 0.07
+  J.DCE: 0.07
+  JM.DCE: 0.07
+  I.DCE: 0.07
+  MA.CZC: 0.07
+  ZC.CZC: 0.07
+  BU.SHF: 0.07
+  V.DCE: 0.07
 
 
 
