更新现货数据

--- a/lib/data/config.yaml
+++ b/lib/data/config.yaml
@@ -12,11 +12,11 @@ log_path: "E:\\CBNB\\BackTestSystem\\data_saving.log"
 
 collection:
 #  - Information
-#  - FuturesMD
-#  - SpotMD
-#  - EDB
-#  - ICEPrice
-#  - DateDB
+  - FuturesMD
+  - SpotMD
+  - EDB
+  - ICEPrice
+  - DateDB
   - DerivDB
 
 FuturesMD:
