--- a/strategy/deviation.yaml
+++ b/strategy/deviation.yaml
@@ -19,259 +19,175 @@ data:
     obj_field: wind_code
     obj_content: TA.CZC
     commodity: TA
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: L.DCE
     commodity: L
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: MA.CZC
     commodity: MA
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: RB.SHF
     commodity: RB
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: J.DCE
     commodity: J
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: JM.DCE
     commodity: JM
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: HC.SHF
     commodity: HC
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: BU.SHF
     commodity: BU
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: ZC.CZC
     commodity: ZC
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: I.DCE
     commodity: I
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: PP.DCE
     commodity: PP
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: V.DCE
     commodity: V
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   - collection: FuturesMD
     obj_field: wind_code
     obj_content: AP.CZC
     commodity: AP
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: SR.CZC
     commodity: SR
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: CU.SHF
     commodity: CU
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: AL.SHF
     commodity: AL
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: RU.SHF
     commodity: RU
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: AG.SHF
     commodity: AG
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: RM.CZC
     commodity: RM
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: NI.SHF
     commodity: NI
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: C.DCE
     commodity: C
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: SC.INE
     commodity: SC
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: FU.SHF
     commodity: FU
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: M.DCE
     commodity: M
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: FG.CZC
     commodity: FG
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, HIGH, LOW, VOLUME, OI]
 
-
-#  -
-#    collection: SpotMD
-#    obj_field: edb_name
-#    obj_content: "价格:螺纹钢:HRB400 20mm:上海"
-#    commodity: RB
-#    fields: [CLOSE]
-#
-#  - collection: SpotMD
-#    obj_field: edb_name
-#    obj_content: "天津港:平仓价(含税):一级冶金焦(A<12.5%,<0.65%S,CSR>65%,Mt8%):山西产"
-#    commodity: J
-#    fields: [CLOSE]
-#
-#  -
-#    collection: SpotMD
-#    obj_field: edb_name
-#    obj_content: "车板价:青岛港:澳大利亚:PB粉矿:61.5%"
-#    commodity: I
-#    fields: [CLOSE]
-#
-#  -
-#    collection: SpotMD
-#    obj_field: edb_name
-#    obj_content: "价格:热轧板卷:Q235B:4.75mm:杭州"
-#    commodity: HC
-#    fields: [CLOSE]
-#
-#  -
-#    collection: SpotMD
-#    obj_field: edb_name
-#    obj_content: "天津港:库提价(含税):主焦煤(A<8%,V28%,0.8%S,G95,Y20mm):澳大利亚产"
-#    commodity: JM
-#    fields: [CLOSE]
-#
-##  -
-##    collection: SpotMD
-##    obj_field: edb_name
-##    obj_content: "秦皇岛港:平仓价:动力末煤(Q5500):山西产"
-##    commodity: ZC
-##    fields: [CLOSE]
-#
-#
-#  -
-#    collection: SpotMD
-#    obj_field: commodity
-#    obj_content: "TA内盘人民币价"
-#    commodity: TA
-#    fields: [price]
-#
-#  -
-#    collection: SpotMD
-#    obj_field: commodity
-#    obj_content: "PP华东现货价"
-#    commodity: PP
-#    fields: [price]
-#
-#  -
-#    collection: SpotMD
-#    obj_field: commodity
-#    obj_content: "LL神华煤化工价格"
-#    commodity: L
-#    fields: [price]
-#
-#  -
-#    collection: SpotMD
-#    obj_field: commodity
-#    obj_content: "甲醇华东（江苏地区）"
-#    commodity: MA
-#    fields: [price]
-#
-#  -
-#    collection: SpotMD
-#    obj_field: commodity
-#    obj_content: "现货（常州sg-5低端价）"
-#    commodity: V
-#    fields: [price]
-#
-##  -
-##    collection: SpotMD
-##    obj_field: commodity
-##    obj_content: "国产重交-长三角"
-##    commodity: BU
-##    fields: [price]
 
 trade_unit:
   TA: 5
@@ -326,19 +242,6 @@ margin_ratio:
   FU.SHF: 0.08
   M.DCE: 0.07
   FG.CZC: 0.07
-
-  TA.CZC_MC_LastMonthEnd: 0.07
-  PP.DCE_MC_LastMonthEnd: 0.07
-  L.DCE_MC_LastMonthEnd: 0.07
-  RB.SHF_MC_LastMonthEnd: 0.07
-  HC.SHF_MC_LastMonthEnd: 0.07
-  J.DCE_MC_LastMonthEnd: 0.07
-  JM.DCE_MC_LastMonthEnd: 0.07
-  I.DCE_MC_LastMonthEnd: 0.07
-  MA.CZC_MC_LastMonthEnd: 0.07
-  ZC.CZC_MC_LastMonthEnd: 0.07
-  BU.SHF_MC_LastMonthEnd: 0.07
-  V.DCE_MC_LastMonthEnd: 0.07
 
 
 tcost: 0
