--- a/strategy/deviation.yaml
+++ b/strategy/deviation.yaml
@@ -5,7 +5,7 @@ db_name: CBNB
 user: yuanjie
 pwd: yuanjie
 
-start_date: '20130101'
+start_date: '20000101'
 end_date: '20190121'
 capital: 1e8
 backtest_mode: OPEN  # 回测方式，CLOSE为以当天收盘价交易, OPEN为以第二天开盘价交易
@@ -283,3 +283,22 @@ tcost_list:
   V.DCE:
     mode: fixed
     value: 8
+  AP.CZC:
+    mode: fixed
+    value: 20
+#  SR.CZC: 0.05
+#    CU.SHF: 0.05
+#    AL.SHF: 0.05
+  RU.SHF:
+    mode: percentage
+    value: 0.000045
+#    AG.SHF: 0.04
+#    RM.CZC: 0.06
+#    NI.SHF: 0.08
+#    C.DCE: 0.07
+#    SC.INE: 0.07
+  FU.SHF:
+    mode: percentage
+    value: 0.00005
+#    M.DCE: 0.07
+#    FG.CZC: 0.07
