增加了库存数据

--- a/lib/data/config.yaml
+++ b/lib/data/config.yaml
@@ -12,12 +12,13 @@ log_path: "E:\\CBNB\\BackTestSystem\\data_saving.log"
 
 collection:
 #  - Information
-#  - FuturesMD
-#  - SpotMD
-#  - EDB
-#  - ICEPrice
-#  - DateDB
-#  - DerivDB
+  - FuturesMD
+  - SpotMD
+  - EDB
+  - ICEPrice
+  - DateDB
+  - DerivDB
+  - Inventory
   - FuturesOIR
 
 FuturesMD:
@@ -139,6 +140,7 @@ SpotMD:
     frequency: daily
     cmd: LL神华煤化工价格
     unit: 元/吨
+    field: price
     path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\LL.csv"
 
   -
@@ -147,6 +149,7 @@ SpotMD:
     frequency: daily
     cmd: 甲醇华东（江苏地区）
     unit: 元/吨
+    field: price
     path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\MA.csv"
 
   -
@@ -155,6 +158,7 @@ SpotMD:
     frequency: daily
     cmd: PP华东现货价
     unit: 元/吨
+    field: price
     path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\PP.csv"
 
   -
@@ -163,6 +167,7 @@ SpotMD:
     frequency: daily
     cmd: TA内盘人民币价
     unit: 元/吨
+    field: price
     path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\PTA.csv"
 
   -
@@ -171,6 +176,7 @@ SpotMD:
     frequency: daily
     cmd: 现货（常州sg-5低端价）
     unit: 元/吨
+    field: price
     path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\PVC.csv"
 
   -
@@ -179,6 +185,7 @@ SpotMD:
     frequency: daily
     cmd: 国产重交-长三角
     unit: 元/吨
+    field: price
     path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\沥青.csv"
 
 
@@ -188,6 +195,7 @@ SpotMD:
     cmd: MEG
     area: 华东主港
     unit: 元/吨
+    field: price
     path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\MEG.csv"
 
   - source: ManualInput
@@ -196,6 +204,7 @@ SpotMD:
     cmd: PX
     area: CFR中国
     unit: 美元/吨
+    field: price
     path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\PX.csv"
 
   - source: ManualInput
@@ -204,6 +213,7 @@ SpotMD:
     cmd: BZ
     area: FOB韩国
     unit: 美元/吨
+    field: price
     path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\BZ.csv"
 
 EDB:
@@ -215,7 +225,6 @@ DateDB:
     cmd: [SHSE]
     frequency: Daily
     source: WIND
-
 
 Information:
   -
@@ -311,3 +320,138 @@ FuturesOIR:
     source: WIND
     cmd:
       - L.DCE
+
+Inventory:
+  -
+    source: Wind
+    func: getEDBFromWind
+    frequency: weekly
+    unit: 吨
+    cmd: S5471265
+    edb_name: "社会库存:PVC"
+
+  -
+    source: Wind
+    func: getEDBFromWind
+    frequency: weekly
+    unit: 万吨
+    cmd: S5713191
+    edb_name: "全国主要港口:铁矿石库存:总计(45港口)"
+
+  -
+    source: Wind
+    func: getEDBFromWind
+    frequency: weekly
+    unit: 万吨
+    cmd: S5120058
+    edb_name: "焦炭库存:天津港"
+
+  -
+    source: Wind
+    func: getEDBFromWind
+    frequency: weekly
+    unit: 万吨
+    cmd: S5116629
+    edb_name: "焦炭库存:连云港"
+
+  -
+    source: Wind
+    func: getEDBFromWind
+    frequency: weekly
+    unit: 万吨
+    cmd: S5116630
+    edb_name: "焦炭库存:日照港"
+
+  -
+    source: Wind
+    func: getEDBFromWind
+    frequency: weekly
+    unit: 万吨
+    cmd: S5136709
+    edb_name: "焦炭库存:青岛港"
+
+  -
+    source: Wind
+    func: getEDBFromWind
+    frequency: weekly
+    unit: 万吨
+    cmd: S5125686
+    edb_name: "炼焦煤库存:六港口合计"
+
+  -
+    source: Wind
+    func: getEDBFromWind
+    frequency: weekly
+    unit: 万吨
+    cmd: S0069694
+    edb_name: "煤炭库存:秦皇岛港:周"
+
+  -
+    source: ManualInput
+    func: getDataFromCSV
+    frequency: weekly
+    cmd: HC
+    area: 全国33个城市
+    unit: 万吨
+    field: inventory
+    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\inventory_db\\HC.csv"
+
+  -
+    source: ManualInput
+    func: getDataFromCSV
+    frequency: weekly
+    cmd: LL
+    area: LL社会库存
+    unit: 万吨
+    field: inventory
+    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\inventory_db\\LL.csv"
+
+  -
+    source: ManualInput
+    func: getDataFromCSV
+    frequency: weekly
+    cmd: MA
+    area: "江苏+宁波+广东+福建"
+    unit: 万吨
+    field: inventory
+    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\inventory_db\\MA.csv"
+
+  -
+    source: ManualInput
+    func: getDataFromCSV
+    frequency: weekly
+    cmd: MEG
+    area: MEG港口库存
+    unit: 万吨
+    field: inventory
+    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\inventory_db\\MEG.csv"
+
+  -
+    source: ManualInput
+    func: getDataFromCSV
+    frequency: weekly
+    cmd: PP
+    area: PP社会库存
+    unit: 万吨
+    field: inventory
+    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\inventory_db\\PP.csv"
+
+  -
+    source: ManualInput
+    func: getDataFromCSV
+    frequency: weekly
+    cmd: PTA
+    area: "PTA总库存（忠朴）"
+    unit: 万吨
+    field: inventory
+    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\inventory_db\\PTA.csv"
+
+  -
+    source: ManualInput
+    func: getDataFromCSV
+    frequency: weekly
+    cmd: RB
+    area: 35城市
+    unit: 万吨
+    field: inventory
+    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\inventory_db\\RB.csv"
