--- a/lib/data/config.yaml
+++ b/lib/data/config.yaml
@@ -269,6 +269,7 @@ ICEPrice:
     frequency: daily
     cmd: MOPJ
     unit: 美元/吨
+    field: price
     path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\MOPJ.csv"
 
   -
@@ -277,6 +278,7 @@ ICEPrice:
     frequency: daily
     cmd: MOGAS
     unit: 美元/桶
+    field: price
     path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\MOGAS.csv"
 
   -
@@ -285,6 +287,7 @@ ICEPrice:
     frequency: daily
     cmd: LPG
     unit: 美元/吨
+    field: price
     path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\LPG.csv"
 
   -
@@ -293,6 +296,7 @@ ICEPrice:
     frequency: daily
     cmd: Gasoil10
     unit: 美元/桶
+    field: price
     path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\Gasoil10.csv"
 
 DerivDB:
