--- a/lib/data/config.yaml
+++ b/lib/data/config.yaml
@@ -11,16 +11,17 @@ pwd: yuanjie
 log_path: "E:\\CBNB\\BackTestSystem\\data_saving.log"
 
 collection:
-  - Information
+#  - Information
+#  - FuturesMinMD
 #  - FuturesMD
-#  - SpotMD
+  - SpotMD
 #  - EDB
 #  - ICEPrice
 #  - DateDB
 #  - DerivDB
 #  - Inventory
 #  - FuturesOIR
-  - FuturesMinMD
+
 
 FuturesMinMD:
   -
@@ -29,10 +30,16 @@ FuturesMinMD:
     func: getFuturesMinPriceFromWind
     night_trade: 1
     night_end: "23:00"
-    cmd: [RB1905.SHF, RB1910.SHF, RB2001.SHF,
-          I1905.DCE, I1909.DCE, I2001.DCE,
-          J1905.DCE, J1909.DCE, J2001.DCE,
-          JM1905.DCE, JM1909.DCE, JM2001.DCE]
+    cmd: [RB.SHF, I.DCE, J.DCE, JM.DCE, L.DCE, PP.DCE, BU.SHF, V.DCE, HC.SHF]
+#          [RB1905.SHF, RB1910.SHF, RB2001.SHF,
+#          I1905.DCE, I1909.DCE, I2001.DCE,
+#          J1905.DCE, J1909.DCE, J2001.DCE,
+#          JM1905.DCE, JM1909.DCE, JM2001.DCE,
+#          L1905.DCE, L1909.DCE, L2001.DCE,
+#          PP1905.DCE, PP1909.DCE, PP2001.DCE,
+#          BU1906.SHF, BU1912.SHF,
+#          V1905.DCE, V1909.DCE, V2001.DCE,
+#          HC1905.SHF, HC1909.SHF, HC2001.SHF]
 
   -
     source: WIND
@@ -40,10 +47,11 @@ FuturesMinMD:
     func: getFuturesMinPriceFromWind
     night_trade: 1
     night_end: "23:30"
-    cmd: [TA905.CZC, TA909.CZC, TA001.CZC,
-          MA905.CZC, MA909.CZC, MA001.CZC,
-          ZC905.CZC, ZC909.CZC, ZC001.CZC]
-
+    cmd: [TA.CZC, MA.CZC, ZC.CZC, FG.CZC]
+#    [TA905.CZC, TA909.CZC, TA001.CZC,
+#          MA905.CZC, MA909.CZC, MA001.CZC,
+#          ZC905.CZC, ZC909.CZC, ZC001.CZC,
+#          FG905.CZC, FG909.CZC, FG001.CZC,]
 
 
 FuturesMD:
@@ -103,61 +111,61 @@ FuturesMD:
 
 SpotMD:
 
-  -
-    source: WIND
-    func: getEDBFromWind
-    frequency: daily
-    unit: 元/吨
-    cmd: S0033227
-    edb_name: "价格:螺纹钢:HRB400 20mm:上海"
-
-  -
-    source: WIND
-    func: getEDBFromWind
-    frequency: daily
-    unit: 元/吨
-    cmd: S5704863
-    edb_name: "价格:热轧板卷:Q235B:4.75mm:杭州"
-
-  -
-    source: WIND
-    func: getEDBFromWind
-    frequency: daily
-    unit: 元/吨
-    cmd: S5118197
-    edb_name: "天津港:平仓价(含税):一级冶金焦(A<12.5%,<0.65%S,CSR>65%,Mt8%):山西产"
-
-  -
-    source: WIND
-    func: getEDBFromWind
-    frequency: daily
-    unit: 元/湿吨
-    cmd: S0174655
-    edb_name: "车板价:青岛港:澳大利亚:PB粉矿:61.5%"
-
-  -
-    source: WIND
-    func: getEDBFromWind
-    frequency: daily
-    unit: 元/吨
-    cmd: S5112223
-    edb_name: "天津港:库提价(含税):主焦煤(A<8%,V28%,0.8%S,G95,Y20mm):澳大利亚产"
-
-  -
-    source: WIND
-    func: getEDBFromWind
-    frequency: daily
-    unit: 元/吨
-    cmd: S5101377
-    edb_name: "秦皇岛港:平仓价:动力末煤(Q5500):山西产"
-
-  -
-    source: ThomsonReuters
-    func: getPriceFromRT
-    frequency: daily
-    unit: 美元/桶
-    type: spot
-    cmd: [WTM-, WTC-]
+#  -
+#    source: WIND
+#    func: getEDBFromWind
+#    frequency: daily
+#    unit: 元/吨
+#    cmd: S0033227
+#    edb_name: "价格:螺纹钢:HRB400 20mm:上海"
+#
+#  -
+#    source: WIND
+#    func: getEDBFromWind
+#    frequency: daily
+#    unit: 元/吨
+#    cmd: S5704863
+#    edb_name: "价格:热轧板卷:Q235B:4.75mm:杭州"
+#
+#  -
+#    source: WIND
+#    func: getEDBFromWind
+#    frequency: daily
+#    unit: 元/吨
+#    cmd: S5118197
+#    edb_name: "天津港:平仓价(含税):一级冶金焦(A<12.5%,<0.65%S,CSR>65%,Mt8%):山西产"
+#
+#  -
+#    source: WIND
+#    func: getEDBFromWind
+#    frequency: daily
+#    unit: 元/湿吨
+#    cmd: S0174655
+#    edb_name: "车板价:青岛港:澳大利亚:PB粉矿:61.5%"
+#
+#  -
+#    source: WIND
+#    func: getEDBFromWind
+#    frequency: daily
+#    unit: 元/吨
+#    cmd: S5112223
+#    edb_name: "天津港:库提价(含税):主焦煤(A<8%,V28%,0.8%S,G95,Y20mm):澳大利亚产"
+#
+#  -
+#    source: WIND
+#    func: getEDBFromWind
+#    frequency: daily
+#    unit: 元/吨
+#    cmd: S5101377
+#    edb_name: "秦皇岛港:平仓价:动力末煤(Q5500):山西产"
+#
+#  -
+#    source: ThomsonReuters
+#    func: getPriceFromRT
+#    frequency: daily
+#    unit: 美元/桶
+#    type: spot
+#    cmd: [WTM-, WTC-]
 
   -
     source: ManualInput
@@ -208,7 +216,7 @@ SpotMD:
     source: ManualInput
     func: getDataFromCSV
     frequency: daily
-    cmd: 国产重交-长三角
+    cmd: 国产重交-山东
     unit: 元/吨
     field: price
     path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\沥青.csv"
@@ -223,23 +231,23 @@ SpotMD:
     field: price
     path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\MEG.csv"
 
-  - source: ManualInput
-    func: getDataFromCSV
-    frequency: daily
-    cmd: PX
-    area: CFR中国
-    unit: 美元/吨
-    field: price
-    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\PX.csv"
-
-  - source: ManualInput
-    func: getDataFromCSV
-    frequency: daily
-    cmd: BZ
-    area: FOB韩国
-    unit: 美元/吨
-    field: price
-    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\BZ.csv"
+#  - source: ManualInput
+#    func: getDataFromCSV
+#    frequency: daily
+#    cmd: PX
+#    area: CFR中国
+#    unit: 美元/吨
+#    field: price
+#    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\PX.csv"
+#
+#  - source: ManualInput
+#    func: getDataFromCSV
+#    frequency: daily
+#    cmd: BZ
+#    area: FOB韩国
+#    unit: 美元/吨
+#    field: price
+#    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\BZ.csv"
 
 EDB:
   - {func: getEDBFromWind, source: WIND, cmd: M0067855, edb_name: "即期汇率:美元兑人民币", unit: null, frequency: Daily}
