--- a/strategy/basis_spread_ferrous.yaml
+++ b/strategy/basis_spread_ferrous.yaml
@@ -15,24 +15,24 @@ date_type: SHSE
 
 data:
 
-  -
-    collection: FuturesMD # 如果没有该字段，则默认为FuturesMD
-    obj_field: wind_code
-    obj_content: TA.CZC
-    commodity: TA
-    fields: [OPEN, CLOSE]
-
-  -
-    obj_field: wind_code
-    obj_content: L.DCE
-    commodity: L
-    fields: [OPEN, CLOSE]
-
-  -
-    obj_field: wind_code
-    obj_content: MA.CZC
-    commodity: MA
-    fields: [OPEN, CLOSE]
+#  -
+#    collection: FuturesMD # 如果没有该字段，则默认为FuturesMD
+#    obj_field: wind_code
+#    obj_content: TA.CZC
+#    commodity: TA
+#    fields: [OPEN, CLOSE]
+#
+#  -
+#    obj_field: wind_code
+#    obj_content: L.DCE
+#    commodity: L
+#    fields: [OPEN, CLOSE]
+#
+#  -
+#    obj_field: wind_code
+#    obj_content: MA.CZC
+#    commodity: MA
+#    fields: [OPEN, CLOSE]
 
   -
     obj_field: wind_code
@@ -58,11 +58,11 @@ data:
     commodity: HC
     fields: [OPEN, CLOSE]
 
-  -
-    obj_field: wind_code
-    obj_content: BU.SHF
-    commodity: BU
-    fields: [OPEN, CLOSE]
+#  -
+#    obj_field: wind_code
+#    obj_content: BU.SHF
+#    commodity: BU
+#    fields: [OPEN, CLOSE]
 
   -
     obj_field: wind_code
@@ -76,24 +76,17 @@ data:
     commodity: I
     fields: [OPEN, CLOSE]
 
-  -
-    obj_field: wind_code
-    obj_content: PP.DCE
-    commodity: PP
-    fields: [OPEN, CLOSE]
-
-  -
-    obj_field: wind_code
-    obj_content: V.DCE
-    commodity: V
-    fields: [OPEN, CLOSE]
-
-  -
-    obj_field: wind_code
-    obj_content: EG.DCE
-    commodity: EG
-    fields: [OPEN, CLOSE]
-
+#  -
+#    obj_field: wind_code
+#    obj_content: PP.DCE
+#    commodity: PP
+#    fields: [OPEN, CLOSE]
+#
+#  -
+#    obj_field: wind_code
+#    obj_content: V.DCE
+#    commodity: V
+#    fields: [OPEN, CLOSE]
 
   -
     collection: SpotMD
@@ -137,53 +130,47 @@ data:
     fields: [CLOSE]
 
 
-  -
-    collection: SpotMD
-    obj_field: commodity
-    obj_content: "TA内盘人民币价"
-    commodity: TA
-    fields: [price]
-
-  -
-    collection: SpotMD
-    obj_field: commodity
-    obj_content: "PP华东现货价"
-    commodity: PP
-    fields: [price]
-
-  -
-    collection: SpotMD
-    obj_field: commodity
-    obj_content: "LL神华煤化工价格"
-    commodity: L
-    fields: [price]
-
-  -
-    collection: SpotMD
-    obj_field: commodity
-    obj_content: "甲醇华东（江苏地区）"
-    commodity: MA
-    fields: [price]
-
-  -
-    collection: SpotMD
-    obj_field: commodity
-    obj_content: "现货（常州sg-5低端价）"
-    commodity: V
-    fields: [price]
-
-  -
-    collection: SpotMD
-    obj_field: commodity
-    obj_content: "国产重交-山东"
-    commodity: BU
-    fields: [price]
-
-  - collection: SpotMD
-    obj_field: commodity
-    obj_content: "MEG"
-    commodity: EG
-    fields: [price]
+#  -
+#    collection: SpotMD
+#    obj_field: commodity
+#    obj_content: "TA内盘人民币价"
+#    commodity: TA
+#    fields: [price]
+#
+#  -
+#    collection: SpotMD
+#    obj_field: commodity
+#    obj_content: "PP华东现货价"
+#    commodity: PP
+#    fields: [price]
+#
+#  -
+#    collection: SpotMD
+#    obj_field: commodity
+#    obj_content: "LL神华煤化工价格"
+#    commodity: L
+#    fields: [price]
+#
+#  -
+#    collection: SpotMD
+#    obj_field: commodity
+#    obj_content: "甲醇华东（江苏地区）"
+#    commodity: MA
+#    fields: [price]
+#
+#  -
+#    collection: SpotMD
+#    obj_field: commodity
+#    obj_content: "现货（常州sg-5低端价）"
+#    commodity: V
+#    fields: [price]
+#
+#  -
+#    collection: SpotMD
+#    obj_field: commodity
+#    obj_content: "国产重交-山东"
+#    commodity: BU
+#    fields: [price]
 
 trade_unit:
   TA: 5
@@ -198,7 +185,6 @@ trade_unit:
   ZC: 100
   BU: 10
   V: 5
-  EG: 10
 
 margin_ratio:
   TA.CZC: 0.07
@@ -213,7 +199,6 @@ margin_ratio:
   ZC.CZC: 0.07
   BU.SHF: 0.07
   V.DCE: 0.07
-  EG.DCE: 0.07
 
 tcost: 0
 
@@ -254,9 +239,6 @@ tcost_list:
   V.DCE:
     mode: fixed
     value: 8
-  EG.DCE:
-    mode: fixed
-    value: 16
 
 
 
